# PriceMind-AI

./: .bandit  .gitignore  CHANGELOG.md  README.md  REAMDE.md  cliff.toml  pyproject.toml  server_config.json
.github/workflows/: ci.yml  lint.yml  security.yml
apps/analytics_mcp/: comparison_service.py  server.py
apps/orchestrator/: agent.py  agent_session.py  executor.py  llm_client.py  llm_intent_resolver.py  main.py  planner.py  response_builder.py  router.py  session.py  tool_registry.py
apps/parser_mcp/: server.py
apps/parser_mcp/services/: llm_fallback_extractor.py  parsing_service.py  validation_service.py
apps/parsing_mcp/: server.py
apps/parsing_mcp/models/: pricing.py
apps/parsing_mcp/services/: llm_fallback_extractor.py  parsing_service.py  validation_service.py
apps/scraping_mcp/: server.py
apps/scraping_mcp/services/: firecrawl_service.py  metadata_service.py  raw_document_service.py  scrape_service.py  validation_service.py
apps/scraping_mcp/tools/: get_raw_provider_content.py  get_scrape_result.py  parse_provider_content.py  scrape_all_providers.py  scrape_provider.py
apps/storage_mcp/: server.py
apps/storage_mcp/db/: connection.py  schema.sql
apps/storage_mcp/db/repositories/: model_repository.py  price_repository.py  provider_repository.py  repository.py
apps/storage_mcp/tools/: compare_prices.py  get_latest_prices.py  store_parsed_prices.py  upsert_provider_price.py
core/: config.py  providers.py  settings.py
scripts/: bootstrap_db.py  run_parser.py  test_end_to_end_single_provider.py  test_local_pipeline.py  test_parser_pipeline.py  test_scrape_service.py  test_scraping_pipeline.py  test_storage_pipeline.py
shared/exceptions/: exceptions.py
tests/: conftest.py
tests/data/raw/: scraped_metadata.json
tests/e2e/: test_end_to_end_single_provider.py
tests/integration/data/raw/: scraped_metadata.json
tests/integration/data/raw/deepinfra/: page.html.txt
tests/integration/orchestrator/: test_query_pipeline.py
tests/integration/parsing_mcp/: test_parser_pipeline.py
tests/integration/scraping_mcp/: test_scraping_pipeline.py
tests/integration/storage_mcp/: test_storage_pipeline.py
tests/unit/: test_price_repository.py  test_router.py
tests/unit/data/raw/: scraped_metadata.json
tests/unit/data/raw/deepinfra/: page.markdown.txt
tests/unit/orchestrator/: test_llm_intent_resolver.py  test_planner.py  test_router.py
tests/unit/parsing_mcp/: test_llm_fallback_extractor.py  test_parsing_service.py  test_validation_service.py
tests/unit/scraping_mcp/: test_scrape_service.py
tests/unit/storage_mcp/: test_connection.py  test_model_repository.py  test_price_repository.py  test_provider_repository.py  test_store_parsed_prices.py
