[project]
name = "pricemind-ai"
version = "0.1.0"
description = "MCP-based LLM pricing scraper, parser and comparison assistant."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.49.0",
    "firecrawl-py>=2.7.1",
    "mcp>=1.6.0",
    "pydantic>=2.10.0",
    "python-dotenv>=1.0.1",
]

[project.optional-dependencies]
dev = [
    "bandit[toml]>=1.7.8",
    "mypy>=1.15.0",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
    "pytest-cov>=6.1.1",
    "ruff>=0.11.2",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = [
    "apps",
    "apps.orchestrator",
    "apps.scraping_mcp",
    "apps.scraping_mcp.tools",
    "apps.scraping_mcp.services",
    "apps.parser_mcp",
    "apps.parser_mcp.services",
    "apps.storage_mcp",
    "apps.storage_mcp.tools",
    "apps.storage_mcp.db",
    "apps.storage_mcp.db.repositories",
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "N", "W"]

[tool.ruff.lint.isort]
known-first-party = ["apps"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-q --strict-markers"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
no_implicit_optional = true
check_untyped_defs = true
ignore_missing_imports = true

[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B101"]

