[project]
name = "pricemind-ai"
version = "0.1.0"
description = "Modular AI system to collect, structure, store, and analyze LLM pricing data"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.6.0",
    "openai>=2.30.0",
    "firecrawl-py>=2.7.1",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.1",
    "python-dotenv>=1.0.1",
]

[project.optional-dependencies]
dev = [
    "bandit[toml]>=1.7.8",
    "mypy>=1.15.0",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
    "pytest-cov>=6.1.1",
    "ruff>=0.11.2",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = [
    "apps*",
    "core*",
    "shared*",
]
exclude = [
    "tests*",
    "scripts*",
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "N", "W"]

[tool.ruff.lint.isort]
known-first-party = ["apps", "core", "shared"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-q --strict-markers"
markers = [
    "unit: fast isolated tests",
    "integration: local integration tests",
    "e2e: end-to-end tests requiring external services",
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
no_implicit_optional = true
check_untyped_defs = true
ignore_missing_imports = true

[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B101"]